Simplify the tail funtionality by using an ArrayDequeue instead of a list.